Enabled Facebook login

--- a/djangorest_boilerplate/templates/login.html
+++ b/djangorest_boilerplate/templates/login.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-
+{% load socialaccount %}
 <!DOCTYPE html>
 <html >
 <head>
@@ -23,7 +23,7 @@
       <a href="#" id="signup-box-link">Sign Up</a>
     </div>
     <div class="social-login">
-      <a href="#">
+      <a href="{% provider_login_url "facebook" method="oauth2" %}">
         <i class="fa fa-facebook fa-lg"></i>
         Login in with facebook
       </a>
