Integrated login with Google and verified login success

--- a/djangorest_boilerplate/templates/login.html
+++ b/djangorest_boilerplate/templates/login.html
@@ -28,7 +28,7 @@
         <i class="fa fa-facebook fa-lg"></i>
         Login in with facebook
       </a>
-      <a href="#">
+      <a href="http://127.0.0.1:8000/accounts/google/login/">
         <i class="fa fa-google-plus fa-lg"></i>
         log in with Google
       </a>
