--- a/djangorest_boilerplate/templates/login.html
+++ b/djangorest_boilerplate/templates/login.html
@@ -28,34 +28,40 @@
         <i class="fa fa-facebook fa-lg"></i>
         Login in with facebook
       </a>
-      <a href="http://127.0.0.1:8000/accounts/google/login/">
+      <a href="/accounts/google/login/">
         <i class="fa fa-google-plus fa-lg"></i>
         log in with Google
       </a>
     </div>
-    <form class="email-login">
+    <form class="email-login" action="/api/users/login/" method="post" target="_blank">
       <div class="u-form-group">
-        <input type="email" placeholder="Email"/>
+        <input type="email" placeholder="Email" name="email"/>
       </div>
       <div class="u-form-group">
-        <input type="password" placeholder="Password"/>
+        <input type="password" placeholder="Password" name="password"/>
       </div>
       <div class="u-form-group">
         <button>Log in</button>
       </div>
       <div class="u-form-group">
-        <a href="#" class="forgot-password">Forgot password?</a>
+        <a href="/api/users/password/reset/" class="forgot-password">Forgot password?</a>
       </div>
     </form>
-    <form class="email-signup">
+    <form class="email-signup" action="/api/users/signup/" method="post" target="_blank">
       <div class="u-form-group">
-        <input type="email" placeholder="Email"/>
+        <input type="email" placeholder="Email" name="email"/>
+      </div>
+      <div class="u-form-group">
+        <input type="text" placeholder="First Name" name="first_name"/>
+      </div>
+      <div class="u-form-group">
+        <input type="text" placeholder="Last Name" name="last_name"/>
       </div>
       <div class="u-form-group">
         <input type="password" placeholder="Password"/>
       </div>
       <div class="u-form-group">
-        <input type="password" placeholder="Confirm Password"/>
+        <input type="password" placeholder="Confirm Password" name="password"/>
       </div>
       <div class="u-form-group">
         <button>Sign Up</button>
